--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 20
+      nodejs: 18
     commands:
       - echo "Installing dependencies..."
       - npm install -g npm@latest
@@ -28,5 +28,5 @@ phases:
 artifacts:
   files:
     - "**/*"
-  base-directory: build
+  base-directory: dist
   discard-paths: no
